# TorchSweetie

./: .gitignore  README.md  pyproject.toml  test_weights.py
tools/: autoanchor.py  calculate-iterations.py  compare-accuracy.py  compare_accuracy.py  convert_yolov5_weights.py  display-variation.py  display_variation.py  evaluate-yolo.py  export.py  export_ret.py  k-fold-cross-validate.py  print-report.py  print_report.py  retrieval.py  test.py  train.py
torchsweetie/: __init__.py
torchsweetie/data/: __init__.py  cls_dataloader.py  cls_dataset.py  cls_datastructs.py  cls_samplers.py  cls_transforms.py  dataloaders.py  datasets.py  det_dataloader.py  det_dataset.py  det_datastructs.py  det_metrics.py  det_samplers.py  det_transforms.py  samplers.py  transform.py  transforms.py
torchsweetie/engine/: __init__.py  cls_exporter.py  cls_k_fold_cross_validator.py  cls_tester.py  cls_trainer.py  det_exporter.py  det_tester.py  det_trainer.py  engine.py  hooks.py  runner.py  trainer.py
torchsweetie/evaluation/: mean_average_precision.py
torchsweetie/exporter/: __init__.py  classification.py  cls_exporter.py  retrieval.py
torchsweetie/losses/: __init__.py  classification.py  cls_losses.py  cls_with_logits_losses.py  losses.py  tal.py  yolov5_loss.py  yolov8_loss.py
torchsweetie/models/: __init__.py  convnext.py  efficientnet.py  inception.py  resnet.py  resnet_sc.py  swin.py  vgg.py  vit.py
torchsweetie/optim/: __init__.py  lr_schedulers.py  momentum_schedulers.py  optimizers.py
torchsweetie/retrieval/: __init__.py  similarity.py
torchsweetie/tasks/: __init__.py  (+1 more)
(+35 files in other folders)
